make it java 8 compatible